Change log for Stellar Mayhem


Version 1.8.4
-------------------------------------------------------------------------------------
Refactored the various helper classes to use IArena instead of UPlayViewBase, 
so that they don't depend on any particular implementation of the game, 
and UPlayViewBase doesn't have to make the helpers friends or declare needed 
members public.


Version 1.8.3
-------------------------------------------------------------------------------------
Miniboss explosions show their shields fragmenting and dispersing
instead of just immediately disappearing.


Version 1.8.2
-------------------------------------------------------------------------------------
Minibosses change heading every second or two. They also fire 
at the player, randomly at first, then more accurately as time goes by.
Two-shield boss has its own ship sprite.

The sound loop for the classic enemy ships grows quieter over time.


Version 1.8.1
-------------------------------------------------------------------------------------
Intro title graphics are animated.

Daylon::FinishCreating was renamed to Daylon::Install, 
because the function installs a created widget into
the scenegraph (and sets some related slot properties).

Daylon::DestroyXXX was renamed Daylon::UninstallXXX, 
because it only removed the widget from the scenegraph
(if that was the last shared reference, then it would 
also be removed, but that's usually not the case).


Version 1.8
-------------------------------------------------------------------------------------
More collision detection for minibosses i.e. torpedos and player ship.

Shield bonk sound plays at half volume when it's a miniboss' shields.


Version 1.7.9
-------------------------------------------------------------------------------------
Added minibosses, which are shielded enemies protected by one or two layers 
of counterrotating polygon shields. Torpedo collisions will lower the strength 