@@ -16,20 +16,7 @@ class FExplosion : public Daylon::PlayObject2D<SDaylonParticles>
 {
 	public:
 
-		static TSharedPtr<FExplosion> Create(
-			FSlateBrush&     Brush,
-			const FVector2D& P,
-			float            MinParticleSize,
-			float            MaxParticleSize,
-			float            MinParticleVelocity,
-			float            MaxParticleVelocity,
-			float            MinParticleLifetime,
-			float            MaxParticleLifetime,
-			float            FinalOpacity,
-			int32            NumParticles,
-			const FVector2D& Inertia = FVector2D(0)
-		);
-
+		static TSharedPtr<FExplosion> Create(FSlateBrush& Brush, const FVector2D& P, const FDaylonParticlesParams& Params, const FVector2D& Inertia = FVector2D(0));
 
 		virtual FVector2D GetActualSize() const override { return FVector2D(4); }
 };
@@ -41,26 +28,10 @@ struct FExplosions
 	float                            InertialFactor = 1.0f;
 
 
-	void SpawnOne(IArena& Arena, const FVector2D& P, const FVector2D& Inertia = FVector2D(0));
-
-	void SpawnOne
-	(
-		IArena&          Arena,
-		const FVector2D& P,
-		float            MinParticleSize,
-		float            MaxParticleSize,
-		float            MinParticleVelocity,
-		float            MaxParticleVelocity,
-		float            MinParticleLifetime,
-		float            MaxParticleLifetime,
-		float            FinalOpacity,
-		int32            NumParticles,
-		const FVector2D& Inertia = FVector2D(0)
-	);
-
-	void Update    (IArena& Arena, const TFunction<FVector2D(const FVector2D&)>& WrapFunction, float DeltaTime);
-
-	void RemoveAll (IArena& Arena);
+	void  SpawnOne  (IArena& Arena, const FVector2D& P, const FVector2D& Inertia = FVector2D(0));
+	void  SpawnOne  (IArena& Arena, const FVector2D& P, const FDaylonParticlesParams& Params, const FVector2D& Inertia = FVector2D(0));
+	void  Update    (IArena& Arena, const TFunction<FVector2D(const FVector2D&)>& WrapFunction, float DeltaTime);
+	void  RemoveAll (IArena& Arena);
 };
 
 // ---------------------------------------------------------------------------------------------------------
