@@ -1,6 +1,10 @@
 Change log for Stellar Mayhem
 
 
+Explosion spawn parameters consolidated into FDaylonParticlesParams, 
+spawn callers now use mostly static const vars of that type.
+
+
 Version 1.8.4
 -------------------------------------------------------------------------------------
 Refactored the various helper classes to use IArena instead of UPlayViewBase, 
